# otus-hw5

./: .gitignore  CMakeLists.txt
include/: cell.h  matrix.h  matrix.hpp
src/: main.cpp
